--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/friend.png" />
+    <link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+  crossorigin="anonymous"
+/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Just For You</title>
   </head>
